# MetalByExample-Rust

./: LICENSE-MIT  README.md
03-DrawingIn2D/drawing_in_2d_macos/: Cargo.toml
03-DrawingIn2D/drawing_in_2d_macos/DrawingIn2DMacOS/: AppDelegate.h  AppDelegate.m  CAVDisplayLink.h  CAVDisplayLink.m  MetalView.h  MetalView.m  ViewController.h  ViewController.m  main.m
03-DrawingIn2D/drawing_in_2d_macos/DrawingIn2DMacOS.xcodeproj/: project.pbxproj
03-DrawingIn2D/drawing_in_2d_macos/DrawingIn2DMacOS.xcodeproj/xcshareddata/xcschemes/: DrawingIn2DMacOS.xcscheme
03-DrawingIn2D/drawing_in_2d_macos/DrawingIn2DMacOS/Base.lproj/: Main.storyboard
03-DrawingIn2D/drawing_in_2d_macos/src/: app_delegate.rs  display_link.rs  lib.rs  metal_view.rs  vector_types.rs  view_controller.rs
04-DrawingIn3D/drawing_in_3d_ios/: Cargo.toml
04-DrawingIn3D/drawing_in_3d_ios/DrawingIn3DIOS/DrawingIn3DIOS/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
04-DrawingIn3D/drawing_in_3d_ios/DrawingIn3DIOS/DrawingIn3DIOS.xcodeproj/: project.pbxproj
04-DrawingIn3D/drawing_in_3d_ios/DrawingIn3DIOS/DrawingIn3DIOS/Base.lproj/: Main.storyboard
04-DrawingIn3D/drawing_in_3d_ios/DrawingIn3DIOS/DrawingIn3DIOS/MBEItems/: MBEMathUtilities.h  MBEMathUtilities.m  MBERenderer.h  MBERenderer.m  MetalView.h  MetalView.m
04-DrawingIn3D/drawing_in_3d_ios/src/: app_delegate.rs  generic_id.rs  lib.rs  matrix_types.rs  mbe_items.rs  scene_delegate.rs  vector_types.rs  view_controller.rs
04-DrawingIn3D/drawing_in_3d_ios/src/mbe_items/: mbe_metal_view.rs  mbe_renderer.rs
Common/core_animation/: Cargo.toml
Common/core_animation/src/: core_animation.rs  dispatch.rs  lib.rs
Common/core_animation/src/core_animation/: core_anim_display_link.rs  core_anim_metal_drawable.rs  core_anim_metal_layer.rs
Common/core_animation/src/dispatch/: dispatch_semaphore.rs
Common/metal_kit/: Cargo.toml
Common/metal_kit/src/: lib.rs  metal_kit.rs
Common/metal_kit/src/metal_kit/: metal_buffer.rs  metal_clear_colors.rs  metal_command_buffer.rs  metal_command_queue.rs  metal_depth_stencil_descriptor.rs  metal_depth_stencil_state.rs  metal_device.rs  metal_library.rs  metal_render_command_encoder.rs  metal_render_pass_depth_attachment_descriptor.rs  metal_render_pass_descriptor.rs  metal_render_pipeline_descriptor.rs  metal_render_pipeline_state.rs  metal_texture.rs  metal_texture_descriptor.rs
(+50 files in other folders)
