[package]
name = "drawing_in_2d_macos"
version = "0.1.0"
authors = ["trsolutions <thomas_odell@trsolutions.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "*"
cocoa = "*"
state = "*"
metal_kit = { path = "../../Common/metal_kit" }
core_animation = { path = "../../Common/core_animation" }
matrix_kit = { path = "../../Common/matrix_kit" }

[lib]
crate-type = ["cdylib"]

#
# Before compilation, need to copy libGlueLib.dylib to
# target/debug/deps/
#
# After compilation need to code-sign with full pathname.
# See Signing & Capabilities for team info.
#
