[package]
name = "metal_kit"
version = "0.1.0"
authors = ["trsolutions <thomas_odell@trsolutions.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "*"
cocoa = "*"

[lib]
name = "metal_kit"
crate-type = ["staticlib"]
